app/buck2_error_tests/src/golden/test_lsp_other_file_visible.golden
# @generated
# To regenerate, append -- --env BUCK2_RUST_REGENERATE_GOLDEN_TESTS=1 and re-run the test

eval.bzl:1:5-27: [visible] context from eval file

Caused by:
    0: error: [visible] context from other file
        --> other.bzl:1:5
         |
       1 | def SHOULD_be_visible(): pass
         |     ^^^^^^^^^^^^^^^^^
         |
    1: [visible] root cause
